# ConversationChatBot

./: .env.example  .gitignore  docker-compose.yml  readme.md
backend/: .env.example  Dockerfile  DockerfileChatGpt.txt  DockerfilePlain.txt  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: arxiv_rag.py  backend.py  config.py  crud.py  db.py  llm_providers.py  model.py  observability.py  router.py  security.py  system_prompt.txt
backend/app/initalize_db/: backend_pre_start.py  initial_data.py
backend/app/routes/: chatmessage.py  conversation.py  messages.py  users.py
backend/scripts/: prestart.sh
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.css
frontend/src/api/: conversation.ts  index.ts  messages.ts  users.ts
frontend/src/components/chatbot/: chat-area.tsx  message-bubble.tsx  message-input.tsx  sidebar.tsx
frontend/src/hooks/: use-chatbot.tsx
frontend/src/interfaces/: index.ts  types.ts
frontend/src/pages/: chatbot.tsx
scripts/: check_ollama.sh  check_ollama_models.sh  cleanup.sh  download_ollama_models.sh  restart.sh  smart_restart.sh  startup.sh  startup_new.sh  startup_old.sh
